<resources>
    <string name="app_name">CustomView</string>
    <string name="sdt_hint"><i>Nhập email</i></string>
    <string name="sdt_text"><i>Email</i></string>
    <string name="password_hint"><i>Nhập mật khẩu</i></string>
    <string name="password_text"><i>Mật khẩu</i></string>
    <string name="name_hint"><i>Nhập tên</i></string>
    <string name="name_text"><i>Tên của bạn</i></string>
    <string name="btn_login">Đăng nhập</string>
    <string name="btn_res">Đăng kí</string>
    <string name="content_load">Đang tải . Vui lòng đợi ...  </string>
    <string name="title_home">Trang chủ</string>
    <string name="title_option">Lựa chọn</string>
    <string name="title_profile">Hồ sơ</string>
    <string name="log_out">Đăng xuất</string>
    <string name="text_res">Chưa có tài khoản ? Đăng kí</string>
    <string name="text_name">Tên của người dùng </string>
    <string name="text_address">Địa chỉ người dùng </string>
    <string name="text_age">Tuổi người dùng </string>
    <string name="exception">:  </string>
    <string name="null_sub">Unknown</string>
    <string name="access_text">Xác nhận</string>


</resources>