<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".screen.LoginActivity">
    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:src="@drawable/logo"/>
    <com.sanghm2.customview.customUI.CustomEditText
        android:id="@+id/edit_phone"
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:hint="@string/sdt_hint"
        app:label="@string/sdt_text" />
    <com.sanghm2.customview.customUI.CustomEditText
        android:id="@+id/edit_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:hint="@string/password_hint"
        app:label="@string/password_text" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_login"
        android:textAllCaps="false"
        android:layout_marginTop="30dp"
        android:onClick="btnPressed"
        android:backgroundTint="#2898D5"
        android:layout_gravity="center"/>

</LinearLayout>