<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".screen.fragment.ProfileFragment">
   <RelativeLayout
       android:visibility="gone"
       android:id="@+id/layout_data"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical">
       <androidx.cardview.widget.CardView
           android:layout_width="100dp"
           android:layout_centerHorizontal="true"
           android:layout_height="100dp"
           android:layout_marginTop="30dp"
           app:cardCornerRadius="50dp">
           <ImageView
               android:id="@+id/avatar"
               android:layout_width="100dp"
               android:layout_height="100dp"
               app:cardCornerRadius="10dp"
               android:src="@drawable/ic_baseline_account_circle_24"
               android:scaleType="centerCrop"
               />
       </androidx.cardview.widget.CardView>
       <androidx.cardview.widget.CardView
           android:layout_width="30dp"
           android:id="@+id/icon_edit"
           android:layout_height="30dp"
           android:layout_marginTop="100dp"
           android:layout_marginStart="230dp"
           app:cardCornerRadius="20dp">
           <ImageView
               android:layout_width="20dp"
               android:layout_height="20dp"
               app:cardCornerRadius="20dp"
               android:layout_gravity="center"
               android:src="@drawable/ic_baseline_edit_24"
               android:scaleType="centerCrop" />
       </androidx.cardview.widget.CardView>
       <LinearLayout
           android:layout_marginTop="170dp"
           android:layout_marginStart="20dp"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal">
           <TextView
               android:id="@+id/name"
               android:layout_width="170dp"
               android:layout_height="wrap_content"
               android:textSize="15sp"
               android:text="@string/text_name"/>
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textSize="15sp"
               android:text="@string/exception"/>
           <TextView
               android:layout_marginStart="5dp"
               android:id="@+id/txt_name"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:gravity="center"
               android:textSize="15sp"
               android:text="@string/null_sub"/>
       </LinearLayout>
       <LinearLayout
           android:layout_marginTop="220dp"
           android:layout_marginStart="20dp"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal">
           <TextView
               android:id="@+id/age"
               android:layout_width="170dp"
               android:layout_height="wrap_content"
               android:textSize="15sp"
               android:text="@string/text_age"/>
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textSize="15sp"
               android:text="@string/exception"/>
           <TextView
               android:layout_marginStart="5dp"
               android:id="@+id/txt_age"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:gravity="center"
               android:textSize="15sp"
               android:text="@string/null_sub"/>
       </LinearLayout>
       <LinearLayout
           android:layout_marginTop="270dp"
           android:layout_marginStart="20dp"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal">
           <TextView
               android:id="@+id/address"
               android:layout_width="170dp"
               android:layout_height="wrap_content"
               android:textSize="15sp"
               android:text="@string/text_address"/>
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textSize="15sp"
               android:text="@string/exception"/>
           <TextView
               android:layout_marginStart="5dp"
               android:id="@+id/txt_address"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:gravity="center"
               android:textSize="15sp"
               android:text="@string/null_sub"/>
       </LinearLayout>
   </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:visibility="visible">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />
    </RelativeLayout>
</LinearLayout>